--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Web Template</title>
   </head>
   <body>
-    <h1>web template with sass</h1>
+    <h1>web template with sass this technology will change the world with function</h1>
   </body>
 </html>
